test-cases/negative/reassign_const.lay
the constant pi is 3.14159
set pi to 3.14
